<?xml version="1.0"?>
<package>
  <name>jaguar_api</name>
  <version>0.0.0</version>
  <description>The jaguar_api package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_api</run_depend>

</package>
